# BnsXmlEdit

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/page/: item_table.rs  main_page.rs  mod.rs  search_tiem.rs
src/page/bottom_panel/: bt.rs  center.rs  left.rs  mod.rs  right.rs  top.rs
src/service/: item_bin_info.rs  load_item.rs  mod.rs  save_item.rs  upgrade_jewelry.rs
src/util/: get_winpc_id.rs  mod.rs  tool.rs
