[package]
name = "qiyu_tools_rust"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rfd = "0.11.0"
egui_extras = { version = "0.21.0" }
image = "0.24.0"
chrono = "0.4.19"
xml-rs = "0.8.4"
toml = "0.7.3"
log = "0.4.17"
base64 = "0.21.0"
rust-crypto = "0.2.36"
quick-xml = {version ="0.28.2", features = ["serialize"]}
regex = "1.7.3"
winapi = "0.3.9"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"